Verify bibliography: fix klecha-2016 DOI, add 12 new DOIs (0.217.4)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -174,11 +174,15 @@
   sources   = {Theories/Pragmatics/RSA/Implementations/TesslerGoodman2019.lean}
 }
 
-@unpublished{tessler-goodman-2022,
+@article{tessler-goodman-2022,
   author    = {Tessler, Michael Henry and Goodman, Noah D.},
   year      = {2022},
   title     = {Warm (for Winter): Inferring Comparison Classes in Communication},
-  note      = {Unpublished manuscript},
+  journal   = {Cognitive Science},
+  volume    = {46},
+  number    = {9},
+  pages     = {e13095},
+  doi       = {10.1111/cogs.13095},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/TesslerGoodman2022.lean}
@@ -221,6 +225,7 @@
   year      = {2025},
   title     = {Causation, Meaning, and Communication},
   journal   = {Psychological Review},
+  doi       = {10.1037/rev0000548},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/BellerGerstenberg2025.lean}
@@ -289,6 +294,7 @@
   year      = {2023},
   title     = {Reconciling Truthfulness and Relevance as Epistemic and Decision-Theoretic Utility},
   journal   = {Cognitive Science},
+  doi       = {10.1037/rev0000437},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/SumersEtAl2023.lean}
@@ -299,7 +305,8 @@
   year      = {2021},
   title     = {Modeling Cross-Linguistic Production of Referring Expressions},
   booktitle = {Proceedings of the Society for Computation in Linguistics},
-  subfield  = {pragmatics/rsa},
+  doi       = {10.7275/VSFN-T057},
+    subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/WaldonDegen2021.lean}
 }
@@ -373,6 +380,7 @@
   booktitle = {Proceedings of SALT},
   volume    = {29},
   pages     = {238--257},
+  doi       = {10.3765/salt.v29i0.4608},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Phenomena/Pragmatics/RSA/Implementations/ChampollionAlsopGrosu2019.lean}
@@ -442,6 +450,7 @@
   year      = {2024},
   title     = {The Semantics and Probabilistic Pragmatics of Deadjectival Intensifiers},
   journal   = {Linguistics and Philosophy},
+  doi       = {10.3765/sp.17.2},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Phenomena/Pragmatics/RSA/Implementations/Nouwen2024.lean}
@@ -537,7 +546,8 @@
   booktitle = {Presupposition and Implicature in Compositional Semantics},
   editor    = {Sauerland, Uli and Stateva, Penka},
   publisher = {Palgrave Macmillan},
-  subfield  = {pragmatics/neogricean},
+  doi       = {10.1057/9780230210752_4},
+    subfield  = {pragmatics/neogricean},
   role      = {cited},
   sources   = {Theories/Pragmatics/RSA/Core/CompositionalRSA.lean}
 }
@@ -617,7 +627,8 @@
   booktitle = {Approaches to Natural Language},
   editor    = {Hintikka, Jaakko and Moravcsik, Julius and Suppes, Patrick},
   publisher = {D. Reidel},
-  subfield  = {semantics/compositional},
+  doi       = {10.1007/978-94-009-2727-8_7},
+    subfield  = {semantics/compositional},
   role      = {foundational},
   sources   = {Theories/Semantics/Montague/PTQ.lean; Theories/Semantics/Montague/Basic.lean}
 }
@@ -707,7 +718,8 @@
   year      = {2025},
   title     = {Some-Things-Considered Desire},
   journal   = {Semantics and Pragmatics},
-  subfield  = {semantics/modality},
+  doi       = {10.3765/sp.18.11},
+    subfield  = {semantics/modality},
   role      = {formalized},
   sources   = {Theories/Semantics/Modality/PhillipsBrown.lean}
 }
@@ -875,7 +887,8 @@
   title     = {Tenses in Compositional Semantics},
   booktitle = {The Expression of Time},
   editor    = {Klein, Wolfgang and Li, Ping},
-  subfield  = {semantics/tense},
+  doi       = {10.1515/9783110199031.129},
+    subfield  = {semantics/tense},
   role      = {formalized},
   sources   = {Theories/Semantics/Tense/VonStechow.lean}
 }
@@ -896,7 +909,8 @@
   title     = {More Structural Analogies between Pronouns and Tenses},
   booktitle = {Proceedings of SALT},
   volume    = {8},
-  subfield  = {semantics/tense},
+  doi       = {10.3765/SALT.V8I0.2808},
+    subfield  = {semantics/tense},
   role      = {formalized},
   sources   = {Theories/Semantics/Tense/Kratzer.lean}
 }
@@ -904,12 +918,12 @@
 @article{klecha-2016,
   author    = {Klecha, Peter},
   year      = {2016},
-  title     = {Modality and Embedded Temporal Interpretation},
+  title     = {Modality and Embedded Temporal Operators},
   journal   = {Semantics and Pragmatics},
   volume    = {9},
-  number    = {9},
+  number    = {8},
   pages     = {1--55},
-  doi       = {10.3765/sp.9.9},
+  doi       = {10.3765/sp.9.8},
   subfield  = {semantics/tense},
   role      = {formalized},
   sources   = {Theories/Semantics/Tense/Klecha.lean}
@@ -1026,7 +1040,8 @@
   title     = {Bare NPs: Kind-Referring, Indefinites, Both, or Neither?},
   booktitle = {Proceedings of SALT},
   volume    = {13},
-  subfield  = {semantics/lexical},
+  doi       = {10.3765/SALT.V13I0.2880},
+    subfield  = {semantics/lexical},
   role      = {formalized},
   sources   = {Theories/Semantics/Lexical/Noun/Kind/Krifka2004.lean}
 }
@@ -1037,7 +1052,8 @@
   title     = {Nominal Reference, Temporal Constitution and Quantification in Event Semantics},
   booktitle = {Semantics and Contextual Expression},
   editor    = {Bartsch, Renate and van Benthem, Johan and van Emde Boas, Peter},
-  subfield  = {semantics/lexical},
+  doi       = {10.1515/9783110877335-005},
+    subfield  = {semantics/lexical},
   role      = {formalized},
   sources   = {Theories/Semantics/Events/Krifka1989.lean}
 }
@@ -1048,7 +1064,8 @@
   title     = {The Origins of Telicity},
   booktitle = {Events and Grammar},
   editor    = {Rothstein, Susan},
-  subfield  = {semantics/lexical},
+  doi       = {10.1007/978-94-011-3969-4_9},
+    subfield  = {semantics/lexical},
   role      = {formalized},
   sources   = {Theories/Semantics/Events/Krifka1998.lean}
 }
@@ -1072,7 +1089,8 @@
   title     = {On the Relation between Distributivity and Maximality},
   journal   = {Semantics and Pragmatics},
   volume    = {18},
-  subfield  = {semantics/lexical},
+  doi       = {10.3765/sp.18.1},
+    subfield  = {semantics/lexical},
   role      = {cited},
   sources   = {Theories/Semantics/Lexical/Plural/Distributivity.lean}
 }
@@ -1089,7 +1107,8 @@
   volume    = {10},
   number    = {1},
   pages     = {41--53},
-  subfield  = {semantics/questions},
+  doi       = {10.1016/B978-0-12-545850-4.50014-5},
+    subfield  = {semantics/questions},
   role      = {formalized},
   sources   = {Theories/Semantics/Questions/Hamblin.lean}
 }
@@ -1251,7 +1270,8 @@
   year      = {2023},
   title     = {Mathematical Structure of Syntactic Merge},
   howpublished = {arXiv:2305.18278},
-  subfield  = {syntax},
+  doi       = {10.48550/arXiv.2305.18278},
+    subfield  = {syntax},
   role      = {formalized},
   sources   = {Theories/Syntax/Minimalism/Formal/MCB2023/Coproduct.lean}
 }
