Consolidate Core/Interfaces → Interface.lean, move Morphology+Verbs+ProcessingModel to Theories/ (0.218.1)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -146,15 +146,12 @@
   sources   = {Theories/Pragmatics/RSA/Implementations/LassiterGoodman2017.lean}
 }
 
-@article{tessler-franke-2020,
+@misc{tessler-franke-2019,
   author    = {Tessler, Michael Henry and Franke, Michael},
-  year      = {2020},
-  title     = {Not Unreasonable: Carving Vague Dimensions with Contraries and Contradictions},
-  journal   = {Journal of Semantics},
-  volume    = {37},
-  number    = {4},
-  pages     = {531--575},
-  doi       = {10.1093/jos/ffaa009},
+  year      = {2019},
+  title     = {Not Unreasonable: Why Two Negatives Don't Make a Positive},
+  howpublished = {PsyArXiv},
+  doi       = {10.31234/osf.io/tqjr2},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/TesslerFranke2020.lean}
@@ -180,7 +177,7 @@
   title     = {Warm (for Winter): Inferring Comparison Classes in Communication},
   journal   = {Cognitive Science},
   volume    = {46},
-  number    = {9},
+  number    = {3},
   pages     = {e13095},
   doi       = {10.1111/cogs.13095},
   subfield  = {pragmatics/rsa},
@@ -188,11 +185,13 @@
   sources   = {Theories/Pragmatics/RSA/Implementations/TesslerGoodman2022.lean}
 }
 
-@article{scontras-tonhauser-2025,
+@inproceedings{scontras-tonhauser-2025,
   author    = {Scontras, Gregory and Tonhauser, Judith},
   year      = {2025},
-  title     = {The Semantics and Pragmatics of Gradable Predicates},
-  journal   = {Semantics and Pragmatics},
+  title     = {Projection without Lexically-Specified Presupposition: A Model for ``Know''},
+  booktitle = {Proceedings of Sinn und Bedeutung},
+  volume    = {29},
+  pages     = {1431--1448},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/ScontrasTonhauser2025.lean}
@@ -209,12 +208,14 @@
   sources   = {Theories/Pragmatics/RSA/Implementations/QingEtAl2016.lean}
 }
 
-@inproceedings{barnett-griffiths-hawkins-2022,
+@article{barnett-griffiths-hawkins-2022,
   author    = {Barnett, Samuel A. and Griffiths, Thomas L. and Hawkins, Robert D.},
   year      = {2022},
   title     = {A Pragmatic Account of the Weak Evidence Effect},
-  booktitle = {Proceedings of the Annual Meeting of the Cognitive Science Society},
-  volume    = {44},
+  journal   = {Open Mind},
+  volume    = {6},
+  pages     = {169--182},
+  doi       = {10.1162/opmi_a_00061},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/BarnettEtAl2022.lean}
@@ -234,8 +235,11 @@
 @article{cummins-franke-2021,
   author    = {Cummins, Chris and Franke, Michael},
   year      = {2021},
-  title     = {Argumentative Strength of Numerical Quantity Expressions},
-  journal   = {Linguistics and Philosophy},
+  title     = {Rational Interpretation of Numerical Quantity in Argumentative Contexts},
+  journal   = {Frontiers in Communication},
+  volume    = {6},
+  pages     = {662027},
+  doi       = {10.3389/fcomm.2021.662027},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/CumminsFranke2021.lean}
@@ -255,22 +259,25 @@
   sources   = {Theories/Pragmatics/RSA/Implementations/DegenEtAl2020.lean}
 }
 
-@inproceedings{grusdt-lassiter-franke-2022,
-  author    = {Grusdt, Fausto and Lassiter, Daniel and Franke, Michael},
+@article{grusdt-lassiter-franke-2022,
+  author    = {Grusdt, Britta and Lassiter, Daniel and Franke, Michael},
   year      = {2022},
   title     = {Probabilistic Modeling of Rational Communication with Conditionals},
-  booktitle = {Proceedings of the Annual Meeting of the Cognitive Science Society},
-  volume    = {44},
+  journal   = {Semantics and Pragmatics},
+  volume    = {15},
+  pages     = {13},
+  doi       = {10.3765/sp.15.13},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/GrusdtLassiterFranke2022.lean}
 }
 
-@article{harding-gerstenberg-icard-2025,
-  author    = {Harding, Jack and Gerstenberg, Tobias and Icard, Thomas},
+@misc{harding-gerstenberg-icard-2025,
+  author    = {Harding, Jacqueline and Gerstenberg, Tobias and Icard, Thomas},
   year      = {2025},
   title     = {A Communication-First Account of Explanation},
-  journal   = {Cognitive Science},
+  howpublished = {arXiv:2505.03732},
+  doi       = {10.48550/arXiv.2505.03732},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/HardingGerstenbergIcard2025.lean}
@@ -290,10 +297,13 @@
 }
 
 @article{sumers-etal-2023,
-  author    = {Sumers, Theodore R. and Hawkins, Robert D. and Ho, Mark K. and Griffiths, Thomas L. and Hadfield-Menell, Dylan},
-  year      = {2023},
+  author    = {Sumers, Theodore R. and Ho, Mark K. and Griffiths, Thomas L. and Hawkins, Robert D.},
+  year      = {2024},
   title     = {Reconciling Truthfulness and Relevance as Epistemic and Decision-Theoretic Utility},
-  journal   = {Cognitive Science},
+  journal   = {Psychological Review},
+  volume    = {131},
+  number    = {1},
+  pages     = {194},
   doi       = {10.1037/rev0000437},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
@@ -314,9 +324,9 @@
 @inproceedings{warstadt-2022,
   author    = {Warstadt, Alex},
   year      = {2022},
-  title     = {Presupposition Accommodation through Pragmatic Inference},
-  booktitle = {Proceedings of SALT},
-  volume    = {32},
+  title     = {Presupposition Triggering Reflects Pragmatic Reasoning about Utterance Utility},
+  booktitle = {Proceedings of the Amsterdam Colloquium},
+  pages     = {451--458},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Implementations/Warstadt2022.lean}
@@ -336,9 +346,9 @@
 }
 
 @article{scontras-pearl-2021,
-  author    = {Scontras, Gregory and Pearl, Lisa},
+  author    = {Scontras, Gregory and Pearl, Lisa S.},
   year      = {2021},
-  title     = {When Pragmatics Matters More for Truth-Value Judgments},
+  title     = {When Pragmatics Matters More for Truth-Value Judgments: An Investigation of Quantifier Scope Ambiguity},
   journal   = {Glossa},
   volume    = {6},
   number    = {1},
@@ -364,17 +374,19 @@
 }
 
 @article{alsop-2024,
-  author    = {Alsop, Simon},
+  author    = {Alsop, Anna},
   year      = {2024},
   title     = {The Pragmatics of Free Choice Any},
-  journal   = {Semantics and Pragmatics},
+  journal   = {Glossa: a journal of general linguistics},
+  volume    = {9},
+  number    = {1},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Phenomena/Pragmatics/RSA/Implementations/Alsop2024.lean}
 }
 
 @inproceedings{champollion-alsop-grosu-2019,
-  author    = {Champollion, Lucas and Alsop, Simon and Grosu, Ioana},
+  author    = {Champollion, Lucas and Alsop, Anna and Grosu, Ioana},
   year      = {2019},
   title     = {Free Choice Disjunction as a Rational Speech Act},
   booktitle = {Proceedings of SALT},
@@ -387,22 +399,27 @@
 }
 
 @article{cremers-wilcox-spector-2023,
-  author    = {Cremers, Alexandre and Wilcox, Ethan and Spector, Benjamin},
+  author    = {Cremers, Alexandre and Wilcox, Ethan G. and Spector, Benjamin},
   year      = {2023},
-  title     = {Exhaustivity and Anti-Exhaustivity in the {RSA} Framework},
-  journal   = {Semantics and Pragmatics},
+  title     = {Exhaustivity and Anti-Exhaustivity in the {RSA} Framework: Testing the Effect of Prior Beliefs},
+  journal   = {Cognitive Science},
+  volume    = {47},
+  number    = {5},
+  pages     = {e13286},
+  doi       = {10.1111/cogs.13286},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Phenomena/Pragmatics/RSA/Implementations/CremersWilcoxSpector2023.lean}
 }
 
 @article{egre-etal-2023,
-  author    = {{\'E}gr{\'e}, Paul and Spector, Benjamin and Mortier, Adrien and Verheyen, Steven},
+  author    = {{\'E}gr{\'e}, Paul and Spector, Benjamin and Mortier, Ad{\`e}le and Verheyen, Steven},
   year      = {2023},
-  title     = {On the Optimality of Vagueness: 'Around', 'Between', and the Sorites},
+  title     = {On the Optimality of Vagueness: ``Around'', ``Between'' and the {G}ricean Maxims},
   journal   = {Linguistics and Philosophy},
   volume    = {46},
-  pages     = {1101--1130},
+  number    = {5},
+  pages     = {1075--1130},
   doi       = {10.1007/s10988-022-09378-2},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
@@ -412,23 +429,24 @@
 @article{franke-bergen-2020,
   author    = {Franke, Michael and Bergen, Leon},
   year      = {2020},
-  title     = {Theory-Driven Statistical Modeling for Semantics and Pragmatics},
-  journal   = {Language, Cognition and Neuroscience},
-  volume    = {35},
-  number    = {8},
-  pages     = {1011--1028},
+  title     = {Theory-Driven Statistical Modeling for Semantics and Pragmatics: A Case Study on Grammatically Generated Implicature Readings},
+  journal   = {Language},
+  volume    = {96},
+  number    = {2},
+  pages     = {e77--e96},
+  doi       = {10.1353/lan.2020.0034},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Phenomena/Pragmatics/RSA/Implementations/FrankeBergen2020.lean}
 }
 
 @article{hawkins-etal-2025,
-  author    = {Hawkins, Robert D. and Bohn, Manuel and Degen, Judith and Goodman, Noah D. and Peloquin, Ben and Frank, Michael C.},
+  author    = {Hawkins, Robert D. and Tsvilodub, Polina and Bergey, Claire A. and Goodman, Noah D. and Franke, Michael},
   year      = {2025},
   title     = {Relevant Answers to Polar Questions},
-  journal   = {Philosophical Transactions of the Royal Society B},
+  journal   = {Philosophical Transactions of the Royal Society B: Biological Sciences},
   volume    = {380},
-  pages     = {20230505},
+  number    = {1932},
   doi       = {10.1098/rstb.2023.0505},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
@@ -449,7 +467,7 @@
   author    = {Nouwen, Rick},
   year      = {2024},
   title     = {The Semantics and Probabilistic Pragmatics of Deadjectival Intensifiers},
-  journal   = {Linguistics and Philosophy},
+  journal   = {Semantics and Pragmatics},
   doi       = {10.3765/sp.17.2},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
@@ -478,16 +496,6 @@
   subfield  = {pragmatics/rsa},
   role      = {formalized},
   sources   = {Theories/Pragmatics/RSA/Extensions/InformationTheory/Basic.lean}
-}
-
-@article{goodwin-etal-2025,
-  author    = {Goodwin, Geoffrey P. and Gershman, Samuel J. and Ullman, Tomer D.},
-  year      = {2025},
-  title     = {Causal Inference from Correlational Statements},
-  journal   = {Cognition},
-  subfield  = {pragmatics/rsa},
-  role      = {formalized},
-  sources   = {Theories/Pragmatics/RSA/Implementations/CausalCorrelation.lean}
 }
 
 % ══════════════════════════════════════════════════════════════════════════════
@@ -609,7 +617,7 @@
   year      = {1999},
   title     = {Information, Relevance, and Social Decisionmaking},
   booktitle = {Logic, Language, and Computation},
-  editor    = {Moss, Lawrence and Ginzburg, Jonathan and de Rijke, Maarten},
+  editor    = {Moss, Larry S. and Ginzburg, Jonathan and de Rijke, Maarten},
   volume    = {2},
   subfield  = {pragmatics/dts},
   role      = {formalized},
@@ -662,7 +670,7 @@
 }
 
 @article{van-de-pol-etal-2023,
-  author    = {van de Pol, Iris and Steinert-Threlkeld, Shane and Szymanik, Jakub},
+  author    = {van de Pol, Iris and Lodder, Peter and van Maanen, Leendert and Steinert-Threlkeld, Shane and Szymanik, Jakub},
   year      = {2023},
   title     = {Quantifiers Satisfying Semantic Universals Have Shorter Minimal Description Length},
   journal   = {Cognition},
@@ -778,7 +786,7 @@
 
 @book{hintikka-1969,
   author    = {Hintikka, Jaakko},
-  year      = {1969},
+  year      = {1962},
   title     = {Knowledge and Belief},
   publisher = {Cornell University Press},
   subfield  = {semantics/reference},
@@ -787,10 +795,11 @@
 }
 
 @article{ahn-zhu-2025,
-  author    = {Ahn, Dorothy and Zhu, Yi},
+  author    = {Ahn, Dorothy and Zhu, Ziling},
   year      = {2025},
-  title     = {Demonstratives and Relational Nouns},
-  journal   = {Semantics and Pragmatics},
+  title     = {A Bridge to Definiteness: Identifying Unique and Relational Definites through Bridging},
+  journal   = {Natural Language Semantics},
+  pages     = {1--52},
   subfield  = {semantics/reference},
   role      = {formalized},
   sources   = {Theories/Semantics/Lexical/Determiner/Demonstrative/AhnZhu2025.lean}
@@ -800,12 +809,13 @@
 %  semantics/focus
 % ══════════════════════════════════════════════════════════════════════════════
 
-@inproceedings{kratzer-shimoyama-2002,
+@incollection{kratzer-shimoyama-2002,
   author    = {Kratzer, Angelika and Shimoyama, Junko},
-  year      = {2002},
+  year      = {2017},
   title     = {Indeterminate Pronouns: The View from {J}apanese},
-  booktitle = {Proceedings of SALT},
-  volume    = {12},
+  booktitle = {Contrastiveness in Information Structure, Alternatives and Scalar Implicatures},
+  pages     = {123--143},
+  publisher = {Springer International Publishing},
   subfield  = {semantics/focus},
   role      = {cited},
   sources   = {Theories/Semantics/Questions/Hamblin.lean}
@@ -840,10 +850,12 @@
 }
 
 @article{cao-white-lassiter-2025,
-  author    = {Cao, Xiaoan and White, Aaron Steven and Lassiter, Daniel},
+  author    = {Cao, Angela and White, Aaron Steven and Lassiter, Daniel},
   year      = {2025},
-  title     = {Graded Causative Verb Semantics},
-  journal   = {Cognitive Science},
+  title     = {Cause, Make, and Force as Graded Causatives},
+  journal   = {Experiments in Linguistic Meaning},
+  volume    = {3},
+  pages     = {88--103},
   subfield  = {semantics/causation},
   role      = {formalized},
   sources   = {Theories/Semantics/Causation/GradedCausation.lean}
@@ -921,9 +933,9 @@
   title     = {Modality and Embedded Temporal Operators},
   journal   = {Semantics and Pragmatics},
   volume    = {9},
-  number    = {8},
+  number    = {9},
   pages     = {1--55},
-  doi       = {10.3765/sp.9.8},
+  doi       = {10.3765/sp.9.9},
   subfield  = {semantics/tense},
   role      = {formalized},
   sources   = {Theories/Semantics/Tense/Klecha.lean}
@@ -1009,7 +1021,7 @@
 @article{chierchia-1998,
   author    = {Chierchia, Gennaro},
   year      = {1998},
-  title     = {Reference to Kinds Across Languages},
+  title     = {Reference to Kinds across Language},
   journal   = {Natural Language Semantics},
   volume    = {6},
   number    = {4},
@@ -1034,9 +1046,9 @@
   sources   = {Theories/Semantics/Lexical/Noun/Kind/Dayal2004.lean}
 }
 
-@inproceedings{krifka-2004,
+@inproceedings{krifka-2003,
   author    = {Krifka, Manfred},
-  year      = {2004},
+  year      = {2003},
   title     = {Bare NPs: Kind-Referring, Indefinites, Both, or Neither?},
   booktitle = {Proceedings of SALT},
   volume    = {13},
@@ -1084,7 +1096,7 @@
 }
 
 @article{haslinger-etal-2025,
-  author    = {Haslinger, Nina and Rosina, Eva and Schmitt, Viola and Wurm, Andreas},
+  author    = {Haslinger, Nina and Rosina, Emil Eva and Schmitt, Viola and Wurm, Valerie},
   year      = {2025},
   title     = {On the Relation between Distributivity and Maximality},
   journal   = {Semantics and Pragmatics},
@@ -1139,7 +1151,7 @@
 
 @book{ciardelli-groenendijk-roelofsen-2019,
   author    = {Ciardelli, Ivano and Groenendijk, Jeroen and Roelofsen, Floris},
-  year      = {2019},
+  year      = {2018},
   title     = {Inquisitive Semantics},
   publisher = {Oxford University Press},
   subfield  = {semantics/questions},
