Fix Martin et al. 2025 bibliography entry; update changelog (0.218.3)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -839,11 +839,11 @@
 %  semantics/causation
 % ══════════════════════════════════════════════════════════════════════════════
 
-@article{martin-rose-nichols-2025,
-  author    = {Martin, Fabienne and Rose, Fran{\c{c}}oise and Nichols, Leah},
+@misc{martin-rose-nichols-2025,
+  author    = {Martin, Fabienne and Rose, David and Nichols, Shaun},
   year      = {2025},
-  title     = {Production vs Dependence Causation in Lexical Causative Verb Semantics},
-  journal   = {Natural Language and Linguistic Theory},
+  title     = {Burning Facts: Thick and Thin Causatives},
+  note      = {Preprint},
   subfield  = {semantics/causation},
   role      = {formalized},
   sources   = {Theories/Semantics/Causation/ProductionDependence.lean}
