Update Warstadt 2022 bibliography sources to new file locations

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -329,7 +329,7 @@
   pages     = {451--458},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
-  sources   = {Theories/Pragmatics/RSA/Implementations/Warstadt2022.lean}
+  sources   = {Phenomena/Presupposition/Studies/Warstadt2022.lean, Phenomena/Presupposition/RSA_Warstadt2022Bridge.lean}
 }
 
 @article{yoon-etal-2020,
