Integrate Tsilia, Zhao & Sharvit (2026) presuppositional tense theory, refactor ThenAdverb to Fragments (0.219.4)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -965,6 +965,16 @@
   sources   = {Theories/Syntax/Minimalism/Tense/Wurmbrand.lean}
 }
 
+@unpublished{tsilia-zhao-sharvit-2026,
+  author    = {Tsilia, Dafni and Zhao, Zhuo and Sharvit, Yael},
+  year      = {2026},
+  title     = {Tense and Perspective},
+  note      = {Manuscript},
+  subfield  = {semantics/tense},
+  role      = {formalized},
+  sources   = {Theories/Semantics/Tense/TsiliaEtAl2026.lean}
+}
+
 % ══════════════════════════════════════════════════════════════════════════════
 %  semantics/lexical
 % ══════════════════════════════════════════════════════════════════════════════
