Ground RSA L1 in BToM; add Yoruba, conditionals, projection comparison (0.222.0)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -1312,6 +1312,16 @@
   sources   = {Theories/Syntax/Minimalism/Tense/Zeijlstra.lean}
 }
 
+@phdthesis{cacchioli-2025,
+  author    = {Cacchioli, Gioia},
+  year      = {2025},
+  title     = {The Syntax of Clausal Prefixes in {T}igrinya},
+  school    = {Universit{\'e} de Gen{\`e}ve},
+  subfield  = {syntax},
+  role      = {formalized},
+  sources   = {Fragments/Tigrinya/ClausePrefixes.lean;Phenomena/Complementation/Studies/Cacchioli2025/Data.lean;Phenomena/Complementation/Studies/Cacchioli2025/Bridge.lean;Phenomena/Complementation/Studies/Cacchioli2025/SelectionBridge.lean}
+}
+
 @article{hahn-degen-futrell-2021,
   author    = {Hahn, Michael and Degen, Judith and Futrell, Richard},
   year      = {2021},
