Add 6 missing bib entries, fix BToM cite key (0.222.1)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -197,6 +197,19 @@
   sources   = {Theories/Pragmatics/RSA/Implementations/ScontrasTonhauser2025.lean}
 }
 
+@article{baker-jara-ettinger-saxe-tenenbaum-2017,
+  author    = {Baker, Chris L. and Jara-Ettinger, Julian and Saxe, Rebecca and Tenenbaum, Joshua B.},
+  year      = {2017},
+  title     = {Rational Quantitative Attribution of Beliefs, Desires and Percepts in Human Mentalizing},
+  journal   = {Nature Human Behaviour},
+  volume    = {1},
+  pages     = {0064},
+  doi       = {10.1038/s41562-017-0064},
+  subfield  = {pragmatics/rsa},
+  role      = {formalized},
+  sources   = {Core/BToM.lean;Comparisons/ProjectionMechanisms.lean}
+}
+
 @inproceedings{qing-goodman-lassiter-2016,
   author    = {Qing, Ciyang and Goodman, Noah D. and Lassiter, Daniel},
   year      = {2016},
@@ -835,6 +848,16 @@
   sources   = {Theories/Semantics/Focus/KratzerSelkirk2020.lean}
 }
 
+@phdthesis{aremu-2026,
+  author    = {Aremu, Daniel},
+  year      = {2026},
+  title     = {Focus Sensitivity in {M}abia and {Y}oruboid},
+  school    = {Goethe University Frankfurt},
+  subfield  = {semantics/focus},
+  role      = {formalized},
+  sources   = {Fragments/Yoruba/FocusParticles.lean}
+}
+
 % ══════════════════════════════════════════════════════════════════════════════
 %  semantics/causation
 % ══════════════════════════════════════════════════════════════════════════════
@@ -859,6 +882,20 @@
   subfield  = {semantics/causation},
   role      = {formalized},
   sources   = {Theories/Semantics/Causation/GradedCausation.lean}
+}
+
+% ══════════════════════════════════════════════════════════════════════════════
+%  semantics/conditionals
+% ══════════════════════════════════════════════════════════════════════════════
+
+@article{evcen-bale-barner-2026,
+  author    = {Evcen, Ebru and Bale, Alan and Barner, David},
+  year      = {2026},
+  title     = {Conditional Inference and Access to Alternatives: The Role of {QUD} and Speaker Knowledge in Conditional Perfection},
+  journal   = {Journal of Semantics},
+  subfield  = {semantics/conditionals},
+  role      = {formalized},
+  sources   = {Phenomena/Conditionals/Studies/EvcenBaleBarner2026/Data.lean;Phenomena/Conditionals/Studies/EvcenBaleBarner2026/Bridge.lean}
 }
 
 % ══════════════════════════════════════════════════════════════════════════════
@@ -973,6 +1010,16 @@
   subfield  = {semantics/tense},
   role      = {formalized},
   sources   = {Theories/Semantics/Tense/TsiliaEtAl2026.lean}
+}
+
+@phdthesis{zhao-2026,
+  author    = {Zhao, Zhuoye},
+  year      = {2026},
+  title     = {Cross-Linguistic and Cross-Domain Parallels in the Semantics of Degree and Time},
+  school    = {Massachusetts Institute of Technology},
+  subfield  = {semantics/tense},
+  role      = {formalized},
+  sources   = {Core/AtomicDistributivity.lean;Theories/Semantics/Events/DegreeEvents.lean;Fragments/Mandarin/AspectComparison.lean;Phenomena/Aspect/CrossDomainBridge.lean;Phenomena/Tense/ThenPresentBridge.lean}
 }
 
 % ══════════════════════════════════════════════════════════════════════════════
@@ -1172,6 +1219,31 @@
 % ══════════════════════════════════════════════════════════════════════════════
 %  semantics/presupposition
 % ══════════════════════════════════════════════════════════════════════════════
+
+@inproceedings{heim-1983,
+  author    = {Heim, Irene},
+  year      = {1983},
+  title     = {On the Projection Problem for Presuppositions},
+  booktitle = {Proceedings of the West Coast Conference on Formal Linguistics},
+  volume    = {2},
+  pages     = {114--125},
+  subfield  = {semantics/presupposition},
+  role      = {cited},
+  sources   = {Comparisons/ProjectionMechanisms.lean}
+}
+
+@article{schlenker-2009,
+  author    = {Schlenker, Philippe},
+  year      = {2009},
+  title     = {Local Contexts},
+  journal   = {Semantics and Pragmatics},
+  volume    = {2},
+  pages     = {1--78},
+  doi       = {10.3765/sp.2.3},
+  subfield  = {semantics/presupposition},
+  role      = {cited},
+  sources   = {Comparisons/ProjectionMechanisms.lean}
+}
 
 @article{heim-1992,
   author    = {Heim, Irene},
