Formalize AHM2021 sluicing corpus, close SIC case-matching gap (0.222.2)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -1339,6 +1339,20 @@
   sources   = {Theories/Syntax/HPSG/Core/Basic.lean}
 }
 
+@article{anand-hardt-mccloskey-2021,
+  author    = {Anand, Pranav and Hardt, Daniel and McCloskey, James},
+  year      = {2021},
+  title     = {The {S}anta {C}ruz Sluicing Data Set},
+  journal   = {Language},
+  volume    = {97},
+  number    = {1},
+  pages     = {e68--e88},
+  doi       = {10.1353/lan.2021.0009},
+  subfield  = {syntax},
+  role      = {formalized},
+  sources   = {Phenomena/Ellipsis/Studies/AnandHardtMcCloskey2021/Data.lean;Phenomena/Ellipsis/Studies/AnandHardtMcCloskey2021/Bridge.lean;Core/Basic.lean}
+}
+
 @book{kayne-1994,
   author    = {Kayne, Richard S.},
   year      = {1994},
