Add Holliday & Icard (2013) epistemic likelihood to Core/Scale.lean (0.224.5)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -785,6 +785,19 @@
   sources   = {Comparisons/FreeChoice/Aloni2022.lean}
 }
 
+@inproceedings{holliday-icard-2013,
+  author    = {Holliday, Wesley H. and Icard, III, Thomas F.},
+  year      = {2013},
+  title     = {Measure Semantics and Qualitative Semantics for Epistemic Modals},
+  booktitle = {Semantics and Linguistic Theory},
+  volume    = {23},
+  pages     = {514--534},
+  doi       = {10.3765/salt.v23i0.2670},
+  subfield  = {semantics/modality},
+  role      = {formalized},
+  sources   = {Core/Scale.lean}
+}
+
 % ══════════════════════════════════════════════════════════════════════════════
 %  semantics/reference
 % ══════════════════════════════════════════════════════════════════════════════
