Add @[ont_sort] tags, ContentIndividual sort, and Moulton (2015) content composition

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -1315,6 +1315,35 @@
 }
 
 % ══════════════════════════════════════════════════════════════════════════════
+%  semantics/attitudes
+% ══════════════════════════════════════════════════════════════════════════════
+
+@article{moulton-2015,
+  author    = {Moulton, Keir},
+  year      = {2015},
+  title     = {{CPs}: Copies and Compositionality},
+  journal   = {Linguistic Inquiry},
+  volume    = {46},
+  number    = {2},
+  pages     = {305--342},
+  doi       = {10.1162/LING_a_00183},
+  subfield  = {semantics/attitudes},
+  role      = {formalized},
+  sources   = {Theories/Semantics/Attitudes/ContentComposition.lean}
+}
+
+@incollection{kratzer-2006,
+  author    = {Kratzer, Angelika},
+  year      = {2006},
+  title     = {Decomposing Attitude Reports},
+  booktitle = {On Wesley},
+  url       = {https://scholarworks.umass.edu/linguist_faculty_pubs/21/},
+  subfield  = {semantics/attitudes},
+  role      = {formalized},
+  sources   = {Core/BToM.lean; Theories/Semantics/Attitudes/ContentComposition.lean}
+}
+
+% ══════════════════════════════════════════════════════════════════════════════
 %  semantics/dynamic
 % ══════════════════════════════════════════════════════════════════════════════
 
