--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -1492,6 +1492,20 @@
   sources   = {Theories/Syntax/DependencyGrammar/Formal/MemorySurprisal/Basic.lean}
 }
 
+@article{osborne-gross-2012,
+  author    = {Osborne, Timothy and Gro{\ss}, Thomas},
+  year      = {2012},
+  title     = {Constructions Are Catenae: Construction Grammar Meets Dependency Grammar},
+  journal   = {Cognitive Linguistics},
+  volume    = {23},
+  number    = {1},
+  pages     = {165--216},
+  doi       = {10.1515/cog-2012-0006},
+  subfield  = {syntax},
+  role      = {formalized},
+  sources   = {Theories/Syntax/DependencyGrammar/Formal/CatenalConstruction.lean}
+}
+
 % ══════════════════════════════════════════════════════════════════════════════
 %  comparative
 % ══════════════════════════════════════════════════════════════════════════════
