Bondarenko & Elliott (2026) monotonicity via mereology; bilateral truthmaker semantics (0.224.74)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -1343,6 +1343,29 @@
   sources   = {Core/BToM.lean; Theories/Semantics/Attitudes/ContentComposition.lean}
 }
 
+@misc{bondarenko-elliott-2026,
+  author    = {Bondarenko, Tatiana and Elliott, Patrick D.},
+  year      = {2026},
+  title     = {Monotonicity via Mereology},
+  note      = {Manuscript},
+  subfield  = {semantics/attitudes},
+  role      = {formalized},
+  sources   = {Theories/Semantics/Truthmaker/Basic.lean; Theories/Semantics/Attitudes/Monotonicity.lean; Phenomena/Complementation/Attitudes/ConjunctionDistribution/Data.lean}
+}
+
+@incollection{fine-2017,
+  author    = {Fine, Kit},
+  year      = {2017},
+  title     = {Truthmaker Semantics},
+  booktitle = {A Companion to the Philosophy of Language},
+  edition   = {2nd},
+  publisher = {Wiley},
+  doi       = {10.1002/9781118972090.ch22},
+  subfield  = {semantics/attitudes},
+  role      = {cited},
+  sources   = {Theories/Semantics/Truthmaker/Basic.lean}
+}
+
 % ══════════════════════════════════════════════════════════════════════════════
 %  semantics/dynamic
 % ══════════════════════════════════════════════════════════════════════════════
