Sociolinguistics cleanup: remove dead code, fix naming, add bib entries

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -143,7 +143,17 @@
   volume    = {36},
   subfield  = {pragmatics/rsa},
   role      = {formalized},
-  sources   = {Theories/Pragmatics/RSA/Implementations/KaoEtAl2014_Metaphor.lean}
+  sources   = {Phenomena/Nonliteral/Metaphor/KaoEtAl2014.lean}
+}
+
+@inproceedings{kao-levy-goodman-2015,
+  author    = {Kao, Justine T. and Levy, Roger and Goodman, Noah D.},
+  year      = {2015},
+  title     = {A Computational Model of Irony},
+  booktitle = {Proceedings of the 37th Annual Meeting of the Cognitive Science Society},
+  subfield  = {pragmatics/rsa},
+  role      = {formalized},
+  sources   = {Phenomena/Nonliteral/Irony/KaoEtAl2015.lean}
 }
 
 @article{lassiter-goodman-2017,
@@ -1527,6 +1537,51 @@
   subfield  = {syntax},
   role      = {formalized},
   sources   = {Theories/Syntax/DependencyGrammar/Formal/CatenalConstruction.lean}
+}
+
+% ══════════════════════════════════════════════════════════════════════════════
+%  sociolinguistics
+% ══════════════════════════════════════════════════════════════════════════════
+
+@article{burnett-2019,
+  author    = {Burnett, Heather},
+  year      = {2019},
+  title     = {Signalling Games, Sociolinguistic Variation, and the Construction of Style},
+  journal   = {Linguistics and Philosophy},
+  volume    = {42},
+  pages     = {419--450},
+  doi       = {10.1007/s10988-018-9254-y},
+  subfield  = {sociolinguistics},
+  role      = {formalized},
+  sources   = {Theories/Sociolinguistics/PropertySpace.lean;Theories/Sociolinguistics/SCM.lean;Theories/Sociolinguistics/EckertMontague.lean;Theories/Sociolinguistics/SMG.lean}
+}
+
+@article{eckert-2008,
+  author    = {Eckert, Penelope},
+  year      = {2008},
+  title     = {Variation and the Indexical Field},
+  journal   = {Journal of Sociolinguistics},
+  volume    = {12},
+  number    = {4},
+  pages     = {453--476},
+  doi       = {10.1111/j.1467-9841.2008.00374.x},
+  subfield  = {sociolinguistics},
+  role      = {cited},
+  sources   = {Theories/Sociolinguistics/PropertySpace.lean;Theories/Sociolinguistics/EckertMontague.lean}
+}
+
+@article{fiske-cuddy-glick-2007,
+  author    = {Fiske, Susan T. and Cuddy, Amy J. C. and Glick, Peter},
+  year      = {2007},
+  title     = {Universal Dimensions of Social Cognition: Warmth and Competence},
+  journal   = {Trends in Cognitive Sciences},
+  volume    = {11},
+  number    = {2},
+  pages     = {77--83},
+  doi       = {10.1016/j.tics.2006.11.005},
+  subfield  = {sociolinguistics},
+  role      = {cited},
+  sources   = {Theories/Sociolinguistics/SCM.lean}
 }
 
 % ══════════════════════════════════════════════════════════════════════════════
