Add Rooth (1992) to bibliography; @cite tags in Interpretation + Bridge

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -899,6 +899,19 @@
   sources   = {Theories/Semantics/Focus/KratzerSelkirk2020.lean}
 }
 
+@article{rooth-1992,
+  author    = {Rooth, Mats},
+  year      = {1992},
+  title     = {A Theory of Focus Interpretation},
+  journal   = {Natural Language Semantics},
+  volume    = {1},
+  pages     = {75--116},
+  doi       = {10.1007/BF02342617},
+  subfield  = {semantics/focus},
+  role      = {formalized},
+  sources   = {Theories/Semantics/Focus/Interpretation.lean; Phenomena/Focus/Rooth1992Bridge.lean}
+}
+
 @phdthesis{aremu-2026,
   author    = {Aremu, Daniel},
   year      = {2026},
