Qing & Franke (2015) model comparison: σ_bU uniquely predicts blue_circle (0.224.98)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -93,6 +93,22 @@
   sources   = {Theories/Pragmatics/RSA/Implementations/Franke2011.lean}
 }
 
+@incollection{qing-franke-2015,
+  author    = {Qing, Ciyang and Franke, Michael},
+  year      = {2015},
+  title     = {Variations on a {Bayesian} Theme: Comparing {Bayesian} Models of Referential Reasoning},
+  booktitle = {Bayesian Natural Language Semantics and Pragmatics},
+  editor    = {Zeevat, Henk and Schmitz, Hans-Christian},
+  publisher = {Springer},
+  series    = {Language, Cognition, and Mind},
+  volume    = {2},
+  pages     = {201--220},
+  doi       = {10.1007/978-3-319-17064-0_9},
+  subfield  = {pragmatics/rsa},
+  role      = {formalized},
+  sources   = {Phenomena/Reference/Studies/QingFranke2015.lean}
+}
+
 @article{bergen-goodman-2015,
   author    = {Bergen, Leon and Goodman, Noah D.},
   year      = {2015},
